--- a/sass/main.css
+++ b/sass/main.css
@@ -4,12 +4,12 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   width: 100vw;
   height: 100vh;
-  scroll-behavior: smooth;
 }
 
 #loading {
@@ -227,5 +227,143 @@ body {
 .main_header .child_header .header_content .header_mini_content2 img {
   width: 100%;
   height: inherit;
+}
+
+.main_about {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_about .child_about {
+  width: 90%;
+  height: inherit;
+  padding: 50px 0px;
+}
+
+.main_about .child_about .about_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "ubuntu", sans-serif;
+  margin-top: 30px;
+}
+
+.main_about .child_about .about_title h2 {
+  font-size: 40px;
+  font-weight: 500;
+  color: black;
+}
+
+.main_about .child_about .about_title .about_mini_title {
+  width: 250px;
+  margin: 20px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_about .child_about .about_title .about_mini_title span:nth-child(1), .main_about .child_about .about_title .about_mini_title span:nth-child(3) {
+  width: 60px;
+  height: 3px;
+  background: black;
+  display: block;
+  border-radius: 10px;
+}
+
+.main_about .child_about .about_title .about_mini_title span:nth-child(2) {
+  color: #da2121;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.main_about .child_about .about_content {
+  width: 100%;
+  height: inherit;
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 50px;
+  font-family: "ubuntu", sans-serif;
+}
+
+.main_about .child_about .about_content .left_content {
+  width: 50%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.main_about .child_about .about_content .left_content figure {
+  width: 90%;
+  height: 90%;
+}
+
+.main_about .child_about .about_content .left_content figure img {
+  width: inherit;
+  height: inherit;
+  -webkit-box-shadow: 2px 4px 4px 3px rgba(77, 67, 67, 0.1);
+          box-shadow: 2px 4px 4px 3px rgba(77, 67, 67, 0.1);
+  border-radius: 3px;
+}
+
+.main_about .child_about .about_content .right_content {
+  width: 50%;
+}
+
+.main_about .child_about .about_content .right_content button {
+  padding: 10px 15px;
+  border: 2px solid #da2121;
+  background: #da2121;
+  border-radius: 5px;
+  margin-top: 20px;
+  -webkit-transition: all .3s linear;
+  transition: all .3s linear;
+}
+
+.main_about .child_about .about_content .right_content button a {
+  text-decoration: none;
+  color: #fff;
+  font-family: "ubuntu", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.main_about .child_about .about_content .right_content button a:hover {
+  color: #da2121;
+}
+
+.main_about .child_about .about_content .right_content button:hover {
+  background: white;
 }
 /*# sourceMappingURL=main.css.map */
