--- a/sass/main.css
+++ b/sass/main.css
@@ -10,6 +10,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 #loading {
@@ -229,7 +230,7 @@ body {
   height: inherit;
 }
 
-.main_about {
+.main_about, .main_project {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -243,13 +244,13 @@ body {
           align-items: center;
 }
 
-.main_about .child_about {
+.main_about .child_about, .main_project .child_about {
   width: 90%;
   height: inherit;
   padding: 50px 0px;
 }
 
-.main_about .child_about .about_title {
+.main_about .child_about .about_title, .main_project .child_about .about_title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,13 +268,13 @@ body {
   margin-top: 30px;
 }
 
-.main_about .child_about .about_title h2 {
+.main_about .child_about .about_title h2, .main_project .child_about .about_title h2 {
   font-size: 40px;
   font-weight: 500;
   color: black;
 }
 
-.main_about .child_about .about_title .about_mini_title {
+.main_about .child_about .about_title .about_mini_title, .main_project .child_about .about_title .about_mini_title {
   width: 250px;
   margin: 20px 0 0 0;
   display: -webkit-box;
@@ -286,7 +287,7 @@ body {
           align-items: center;
 }
 
-.main_about .child_about .about_title .about_mini_title span:nth-child(1), .main_about .child_about .about_title .about_mini_title span:nth-child(3) {
+.main_about .child_about .about_title .about_mini_title span:nth-child(1), .main_about .child_about .about_title .about_mini_title span:nth-child(3), .main_project .child_about .about_title .about_mini_title span:nth-child(1), .main_project .child_about .about_title .about_mini_title span:nth-child(3) {
   width: 60px;
   height: 3px;
   background: black;
@@ -294,13 +295,13 @@ body {
   border-radius: 10px;
 }
 
-.main_about .child_about .about_title .about_mini_title span:nth-child(2) {
+.main_about .child_about .about_title .about_mini_title span:nth-child(2), .main_project .child_about .about_title .about_mini_title span:nth-child(2) {
   color: #da2121;
   font-size: 20px;
   font-weight: 500;
 }
 
-.main_about .child_about .about_content {
+.main_about .child_about .about_content, .main_project .child_about .about_content {
   width: 100%;
   height: inherit;
   margin-top: 40px;
@@ -316,7 +317,7 @@ body {
   font-family: "ubuntu", sans-serif;
 }
 
-.main_about .child_about .about_content .left_content {
+.main_about .child_about .about_content .left_content, .main_project .child_about .about_content .left_content {
   width: 50%;
   height: 100%;
   display: -ms-grid;
@@ -324,12 +325,12 @@ body {
   place-items: center;
 }
 
-.main_about .child_about .about_content .left_content figure {
+.main_about .child_about .about_content .left_content figure, .main_project .child_about .about_content .left_content figure {
   width: 90%;
   height: 90%;
 }
 
-.main_about .child_about .about_content .left_content figure img {
+.main_about .child_about .about_content .left_content figure img, .main_project .child_about .about_content .left_content figure img {
   width: inherit;
   height: inherit;
   -webkit-box-shadow: 2px 4px 4px 3px rgba(77, 67, 67, 0.1);
@@ -337,21 +338,37 @@ body {
   border-radius: 3px;
 }
 
-.main_about .child_about .about_content .right_content {
+.main_about .child_about .about_content .right_content, .main_project .child_about .about_content .right_content {
   width: 50%;
 }
 
-.main_about .child_about .about_content .right_content button {
+.main_about .child_about .about_content .right_content h2, .main_project .child_about .about_content .right_content h2 {
+  font-size: 30px;
+  line-height: 40px;
+}
+
+.main_about .child_about .about_content .right_content h2 span, .main_project .child_about .about_content .right_content h2 span {
+  color: #da2121;
+  font-size: 40px;
+  letter-spacing: 1px;
+}
+
+.main_about .child_about .about_content .right_content p, .main_project .child_about .about_content .right_content p {
+  margin-top: 20px;
+  line-height: 30px;
+}
+
+.main_about .child_about .about_content .right_content button, .main_project .child_about .about_content .right_content button {
   padding: 10px 15px;
   border: 2px solid #da2121;
   background: #da2121;
   border-radius: 5px;
   margin-top: 20px;
-  -webkit-transition: all .3s linear;
-  transition: all .3s linear;
+  -webkit-transition: all .4s linear;
+  transition: all .4s linear;
 }
 
-.main_about .child_about .about_content .right_content button a {
+.main_about .child_about .about_content .right_content button a, .main_project .child_about .about_content .right_content button a {
   text-decoration: none;
   color: #fff;
   font-family: "ubuntu", sans-serif;
@@ -359,11 +376,188 @@ body {
   font-weight: 500;
 }
 
-.main_about .child_about .about_content .right_content button a:hover {
+.main_about .child_about .about_content .right_content button a:hover, .main_project .child_about .about_content .right_content button a:hover {
   color: #da2121;
 }
 
-.main_about .child_about .about_content .right_content button:hover {
+.main_about .child_about .about_content .right_content button:hover, .main_project .child_about .about_content .right_content button:hover {
   background: white;
+  color: #df1d37;
+}
+
+.main_project .Project_conents {
+  padding: 50px 0px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+.main_project .Project_conents .project_content {
+  width: 100%;
+  height: 600px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  padding: 5px 15px 20px 15px;
+  text-align: center;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 3px 10px -1px rgba(0, 0, 0, 0.26);
+          box-shadow: 0px 3px 10px -1px rgba(0, 0, 0, 0.26);
+}
+
+.main_project .Project_conents .project_content .Project_img {
+  width: 80%;
+  height: 400px;
+  border-radius: 5px;
+}
+
+.main_project .Project_conents .project_content .project_body {
+  margin-top: 10px;
+}
+
+.main_project .Project_conents .project_content .project_body h2 {
+  color: red;
+}
+
+.main_project .Project_conents .project_content .project_body span {
+  margin: 5px 0;
+  display: block;
+  font-size: 10px;
+  color: gray;
+  font-family: "ubuntu", sans-serif;
+}
+
+.main_project .Project_conents .project_content .project_body p {
+  font-family: "ubuntu", sans-serif;
+  line-height: 20px;
+}
+
+.main_project .Project_conents .project_content .project_body .rating-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+}
+
+.main_project .Project_conents .project_content .project_body .rating-btn .read_btn a {
+  text-decoration: none;
+  padding: 10px 15px;
+  border: 2px solid #da2121;
+  background: #da2121;
+  border-radius: 5px;
+  margin-top: 20px;
+  -webkit-transition: all .4s linear;
+  transition: all .4s linear;
+  color: #fff;
+}
+
+.main_project .Project_conents .project_content .project_body .rating-btn .read_btn a:hover {
+  background: #fff;
+  color: #d61919;
+}
+
+.main_project .Project_conents .project_content .project_body .rating-btn .rating .fa-star {
+  cursor: pointer;
+  color: #e2a115;
+}
+
+.contact_body {
+  width: 100%;
+  height: 450px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+}
+
+.contact_body .contact_status {
+  width: 50%;
+  height: 100%;
+}
+
+.contact_body .contact_form {
+  width: 50%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  text-align: center;
+}
+
+.contact_body .contact_form form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.contact_body .contact_form form .form_title {
+  font-size: 25px;
+  margin-bottom: 15px;
+}
+
+.contact_body .contact_form form label {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact_body .contact_form form label span {
+  font-size: 20px;
+}
+
+.contact_body .contact_form form label input {
+  display: block;
+  margin-top: 10px;
+  padding: 8px 15px;
+  border-radius: 5px;
+  font-size: 14px;
+  width: 250px;
+}
+
+.contact_body .contact_form form label textarea {
+  display: block;
+  margin-top: 10px;
+  width: 250px;
+  height: 150px;
+  border-radius: 5px;
+  padding: 8px 15px;
+  resize: none;
+}
+
+.contact_body .contact_form form button {
+  padding: 10px 15px;
+  background: #d61919;
+  border: 2px solid #da2121;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 500;
+  font-family: "ubuntu", sans-serif;
+  border-radius: 5px;
+  -webkit-transition: all .4s linear;
+  transition: all .4s linear;
+}
+
+.contact_body .contact_form form button:hover {
+  color: #da2121;
+  background: #fff;
 }
 /*# sourceMappingURL=main.css.map */
