--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 body{
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 // css variable
@@ -222,7 +223,7 @@ $ubuntu : 'ubuntu', sans-serif;
 
 // about site styling ----------------------------------------->
 
-.main_about{
+.main_about,.main_project{
     width: 100%;
     height: 100%;
     display: flex;
@@ -302,13 +303,28 @@ $ubuntu : 'ubuntu', sans-serif;
             .right_content{
                 width: 50%;
 
+                h2{
+                    font-size: 30px;
+                    line-height: 40px;
+                    span{
+                        color: rgb(218, 33, 33);
+                        font-size: 40px;
+                        letter-spacing: 1px;
+                    }
+                }
+
+                p{
+                    margin-top: 20px;
+                    line-height: 30px;
+                }
+
                 button{
                     padding: 10px 15px;
                     border: 2px solid rgb(218, 33, 33);
                     background: rgb(218, 33, 33);
                     border-radius: 5px;
                     margin-top: 20px;
-                    transition: all .3s linear;
+                    transition: all .4s linear;
                     a{
                         text-decoration: none;
                         color: #fff;
@@ -322,7 +338,166 @@ $ubuntu : 'ubuntu', sans-serif;
                     }
                     &:hover{
                         background: white;
+                        color: rgb(223, 29, 55);
                     }
+                }
+            }
+        }
+    }
+}
+
+.main_project{
+    .Project_conents{
+        padding: 50px 0px;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-gap: 20px;
+
+        .project_content{
+            width: 100%;
+            height: 600px;
+            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+            padding: 5px 15px 20px 15px;
+            text-align: center;
+            border-radius: 5px;
+            box-shadow: 0px 3px 10px -1px rgba(0,0,0,0.26);
+
+            .Project_img{
+                width: 80%;
+                height: 400px;
+                border-radius: 5px;
+            }
+
+            .project_body{
+                margin-top: 10px;
+
+                h2{
+                    color: red;
+                }
+                span{
+                    margin: 5px 0;
+                    display: block;
+                    font-size: 10px;
+                    color: gray;
+                    font-family: $ubuntu;
+                }
+
+                p{
+                    font-family: $ubuntu;
+                    line-height: 20px;
+                }
+
+                .rating-btn{
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+                    margin-top: 20px;
+
+                    .read_btn{
+                        a{
+                            text-decoration: none;
+                            padding: 10px 15px;
+                            border: 2px solid rgb(218, 33, 33);
+                            background: rgb(218, 33, 33);
+                            border-radius: 5px;
+                            margin-top: 20px;
+                            transition: all .4s linear;
+                            color: #fff;
+
+                            &:hover{
+                                background: #fff;
+                                color: rgb(214, 25, 25);
+                            }
+                        }
+                    }
+
+                    .rating{
+                        .fa-star {
+                            cursor: pointer;
+                            color: rgb(226, 161, 21);
+                         }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// contact part start =======================================>
+
+.contact_body{
+    width: 100%;
+    height: 450px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+
+    .contact_status{
+        width: 50%;
+        height: 100%;
+    }
+
+    .contact_form{
+        width: 50%;
+        height: 100%;
+        display: grid;
+        place-items: center;
+        text-align: center;
+
+        form{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin-top: 50px;
+
+            .form_title{
+                font-size: 25px;
+                margin-bottom: 15px;
+            }
+
+            label{
+                margin-bottom: 20px;
+                display: flex;
+                flex-direction: column;
+                
+                span{
+                    font-size: 20px;
+                }
+
+                input{
+                    display: block;
+                    margin-top: 10px;
+                    padding: 8px 15px;
+                    border-radius: 5px;
+                    font-size: 14px;
+                    width: 250px;
+                }
+
+                textarea{
+                    display: block;
+                    margin-top: 10px;
+                    width: 250px;
+                    height: 150px;
+                    border-radius: 5px;
+                    padding : 8px 15px;
+                    resize: none;
+                }
+            }
+
+            button{
+                padding: 10px 15px;
+                background: rgb(214, 25, 25);
+                border: 2px solid rgb(218, 33, 33);
+                font-size: 18px;
+                color: #fff;
+                font-weight: 500;
+                font-family: $ubuntu;
+                border-radius: 5px;
+                transition: all .4s linear;
+
+                &:hover{
+                    color: rgb(218, 33, 33);
+                    background: #fff;
                 }
             }
         }
