--- a/sass/main.scss
+++ b/sass/main.scss
@@ -346,12 +346,15 @@ $ubuntu : 'ubuntu', sans-serif;
     }
 }
 
+// project site update ---------------------o>
+
 .main_project{
     .Project_conents{
         padding: 50px 0px;
         display: grid;
         grid-template-columns: repeat(3,1fr);
         grid-gap: 20px;
+        margin-bottom: 100px;
 
         .project_content{
             width: 100%;
@@ -424,6 +427,11 @@ $ubuntu : 'ubuntu', sans-serif;
 }
 
 // contact part start =======================================>
+
+.main_about.main_contact{
+    background: url("https://i.ibb.co/VHdBShT/cerulean-blue-curve-frame-template-53876-99029.jpg") no-repeat center;
+    background-size: cover;
+}
 
 .contact_body{
     width: 100%;
@@ -499,6 +507,28 @@ $ubuntu : 'ubuntu', sans-serif;
                     color: rgb(218, 33, 33);
                     background: #fff;
                 }
+            }
+        }
+    }
+}
+
+// footer part styling -0----------------------------------------->
+
+.main_footer{
+    width: 100%;
+    height: auto;
+    .child_footer{
+        background: black;
+        padding: 20px 0px;
+        text-align: center;
+
+        p{
+            font-family: $ubuntu;
+            color: #fff;
+            font-size: 20px;
+
+            span{
+                color: rgb(218, 33, 33);
             }
         }
     }
