--- a/sass/main.scss
+++ b/sass/main.scss
@@ -616,6 +616,170 @@ $ubuntu : 'ubuntu', sans-serif;
     }
 }
 
+
+
+// blog page styleshet ------------------------------------------>
+
+main{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    display: grid;
+    place-items: center;
+
+    .section_blog{
+        width: 50%;
+        height: 50%;
+        box-shadow: 11px 11px 18px -7px rgba(0,0,0,0.1),
+                    -11px -11px 18px -7px rgba(0,0,0,0.1);
+        border-radius: 5px;
+        display: grid;
+        place-items: center;
+        position: relative;
+
+        h1{
+            font-family: $ubuntu;
+        }
+
+        a{
+            position: absolute;
+            right: 2%;
+            top: 2%;
+
+            i{
+                font-size: 30px;
+            }
+        }
+    }
+}
+
+
+// poject detalis setup ---------------------------------------->
+
+.project_3_main{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+
+    .project_3_section{
+        width: 90%;
+        height: 90%;
+        box-shadow: 11px 11px 18px -7px rgba(0,0,0,0.1),
+                    -11px -11px 18px -7px rgba(0,0,0,0.1);
+        border-radius: 5px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background: rgba(162, 216, 238, 0.1);
+
+        .project_3_left{
+            width: 50%;
+            height: 100%;
+
+            .project_3_up{
+                width: 100%;
+                height: 70%;
+                display: grid;
+                place-items: center;
+
+                img{
+                    width: 90%;
+                    height: 90%;
+                    box-shadow: 11px 11px 18px -7px rgba(0,0,0,0.1),
+                    -11px -11px 18px -7px rgba(0,0,0,0.1);
+                    border-radius: 5px;
+                    cursor: pointer;
+                }
+            }
+
+            .project_3_down{
+                width: 100%;
+                height: 30%;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                padding: 5px 0px;
+
+                img{
+                    width: 30%;
+                    height: 80%;
+                    box-shadow: 11px 11px 18px -7px rgba(0,0,0,0.1),
+                    -11px -11px 18px -7px rgba(0,0,0,0.1);
+                    border-radius: 5px;
+                    cursor: pointer;
+
+                    &:hover{
+                        border: 1px solid rgb(46, 198, 245);
+                    }
+                }
+            }
+        }
+
+        .project_3_right{
+            width: 50%;
+            height: 100%;
+            padding: 50px;
+            font-family: $ubuntu;
+
+            .project_3_right_up{
+                width: 100%;
+                height: 70%;
+
+                h2{
+                    font-size: 30px;
+                    text-align: center;
+                }
+
+                p{
+                    margin: 20px 0;
+
+                    small{
+                        color: gray;
+                    }
+                }
+
+                ul{
+                    li{
+                        font-size: 18px;
+                        margin-top: 5px;
+                    }
+                }
+            }
+
+            .project_3_right_down{
+                width: 100%;
+                height: 30%;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                position: relative;
+
+                #cancel_btn{
+                    position: absolute;
+                    bottom: 0px;
+                }
+
+                a{
+                    text-decoration: none;
+                    background: rgb(218, 33, 33);
+                    color: white;
+                    border: 2px solid rgb(218, 33, 33);
+                    padding: 8px 10px;
+                    border-radius: 5px;
+                    transition: all .4s linear;
+
+                    &:hover{
+                        background: transparent;
+                        color: rgb(218, 33, 33);
+                    }
+                }
+            }
+        }
+    }
+}
+
+
 // make responsive ---------------------------------------->
 
 @media (max-width: 1080px) {
@@ -1191,4 +1355,137 @@ $ubuntu : 'ubuntu', sans-serif;
             }
         }
     }
+
+    // blog part ---------------------------------------
+    main{
+    
+        .section_blog{
+            width: 80%;
+            height: 80%;
+        }
+    }
+
+    // poject detalis setup ---------------------------------------->
+
+    .project_3_main{
+        width: 100%;
+        height: 100%;
+        display: grid;
+        place-items: center;
+
+        .project_3_section{
+            width: 95%;
+            height: 95%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 30px;
+            background: rgba(162, 216, 238, 0.1);
+
+            .project_3_left{
+                width: 90%;
+                height: 100%;
+
+                .project_3_up{
+                    width: 100%;
+                    height: 70%;
+                    display: grid;
+                    place-items: center;
+
+                    img{
+                        width: 90%;
+                        height: 90%;
+                        box-shadow: 11px 11px 18px -7px rgba(0,0,0,0.1),
+                        -11px -11px 18px -7px rgba(0,0,0,0.1);
+                        border-radius: 5px;
+                        cursor: pointer;
+                    }
+                }
+
+                .project_3_down{
+                    width: 100%;
+                    height: 30%;
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+                    padding: 5px 0px;
+
+                    img{
+                        width: 30%;
+                        height: 80%;
+                        box-shadow: 11px 11px 18px -7px rgba(0,0,0,0.1),
+                        -11px -11px 18px -7px rgba(0,0,0,0.1);
+                        border-radius: 5px;
+                        cursor: pointer;
+
+                        &:hover{
+                            border: 1px solid rgb(46, 198, 245);
+                        }
+                    }
+                }
+            }
+
+            .project_3_right{
+                width: 90%;
+                height: 100%;
+                padding: 50px;
+                font-family: $ubuntu;
+
+                .project_3_right_up{
+                    width: 100%;
+                    height: 70%;
+
+                    h2{
+                        font-size: 30px;
+                        text-align: center;
+                    }
+
+                    p{
+                        margin: 20px 0;
+
+                        small{
+                            color: gray;
+                        }
+                    }
+
+                    ul{
+                        li{
+                            font-size: 18px;
+                            margin-top: 5px;
+                        }
+                    }
+                }
+
+                .project_3_right_down{
+                    width: 100%;
+                    height: 30%;
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+
+                    #cancel_btn{
+                        position: absolute;
+                        bottom: 0px;
+                    }
+
+                    a{
+                        text-decoration: none;
+                        background: rgb(218, 33, 33);
+                        color: white;
+                        border: 2px solid rgb(218, 33, 33);
+                        padding: 8px 10px;
+                        border-radius: 5px;
+                        transition: all .4s linear;
+
+                        &:hover{
+                            background: transparent;
+                            color: rgb(218, 33, 33);
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
+
+
