--- a/sass/main.scss
+++ b/sass/main.scss
@@ -396,6 +396,7 @@ $ubuntu : 'ubuntu', sans-serif;
 // project site update ---------------------o>
 
 .main_project{
+    margin: 50px 0;
     .Project_conents{
         padding: 50px 0px;
         display: grid;
