--- a/sass/main.scss
+++ b/sass/main.scss
@@ -279,7 +279,7 @@ $ubuntu : 'ubuntu', sans-serif;
 
 .main_about,.main_project{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -394,6 +394,124 @@ $ubuntu : 'ubuntu', sans-serif;
                         background: white;
                         color: rgb(223, 29, 55);
                     }
+                }
+            }
+        }
+    }
+}
+
+// service site styling -------------------------->
+
+.main_services{
+    width: 100%;
+    height: 70%;
+    margin-top: 50px;
+    display: grid;
+    place-items: center;
+
+    .child_service{
+
+        .service_title{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font-family: $ubuntu;
+
+            h2{
+                font-size: 40px;
+                font-weight: 500;
+                color: black;
+                text-align: center;
+            }
+
+            .about_mini_title{
+                width: 250px;
+                margin: 20px 0 0 0;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+
+                span:nth-child(1),span:nth-child(3){
+                    width: 40px;
+                    height: 3px;
+                    background: black;
+                    display: block;
+                    border-radius: 10px;
+                }
+
+                span:nth-child(2){
+                    color: rgb(218, 33, 33);
+                    font-size: 20px;
+                    font-weight: 500;
+                }
+            }
+        }
+
+        .service_contents{
+            width: 100%;
+            height: auto;
+            margin-top: 100px;
+            padding: 0px 150px;
+            display: grid;
+            grid-template-columns: repeat(3 , 1fr);
+            grid-gap: 20px;
+
+            .service_content{
+                width: auto;
+                height: auto;
+                text-align: center;
+                box-shadow: 3px 6px 26px rgba(0, 0, 0, 0.4)  ; 
+                border-radius: 5px;
+                padding: 30px 20px;
+                background: rgb(22, 134, 240);
+                transition: all .4s ease-in-out;
+
+                p{
+                    i{
+                        font-size: 40px;
+                        color: rgb(218, 33, 33);
+                        font-weight: bold;
+                        transform: scale(1);
+                        transition: all .4s ease-in-out;
+                    }
+                }
+
+                h1{
+                    font-size: 20px;
+                    margin: 20px 0;
+                    font-family: $ubuntu;
+                    color: white;
+                    text-shadow : -1px 2px 6px rgba(36, 31, 30, 0.81);
+                    transform: scale(1);
+                    transition: all .4s ease-in-out;
+                }
+
+                p{
+                    font-family: roboto;
+                    transform: scale(0.9);
+                    transition: all .4s ease-in-out;
+                }
+
+                &:hover{
+                    background: rgb(218, 33, 33);
+
+                    p{
+                        i{
+                            color: white;
+                            transform: scale(1.1);
+                        }
+                    }
+
+                    h1{
+                        transform: scale(1.2);
+                    }
+                    p{
+                        
+                        color: white;
+                        transform: scale(1);
+                    }
+
                 }
             }
         }
@@ -939,6 +1057,16 @@ main{
     }
 }
 
+// service part responsive ----------------------> 
+
+.main_services{
+    .child_service{
+        .service_contents{
+            padding: 50px;
+        }
+    }
+}
+
 
 // phone responsive ------------------------------ >
 
@@ -1170,6 +1298,20 @@ main{
             }
         }
     }
+
+    // service part responsive ----------------------> 
+
+.main_services{
+    margin-top: 200px;
+    margin-bottom: 470px;
+    .child_service{
+        .service_contents{
+            padding: 0 25px 0 10px;
+            grid-template-columns: 1fr;
+            place-items: center;
+        }
+    }
+}
 
     // Project part ------------------------>
 
@@ -1477,7 +1619,7 @@ main{
                     }
 
                     a{
-                        padding: 4px 8px;
+                        padding: 3px 5px;
                         font-size: 10px;
 
                         &:hover{
